--- a/example/index.html
+++ b/example/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/css/aws-view.css" type="text/css">
+    <link rel="stylesheet" href="aws-view_example.css" type="text/css">
   </head>
   <body>
-    <img data-aws-view src="https://plus.unsplash.com/premium_photo-1678112180202-cd950dbe5a35?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt>
-    <script src="/js/aws-view.js" defer></script>
+    <img data-aws-view width=200 src="https://plus.unsplash.com/premium_photo-1678112180202-cd950dbe5a35?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt>
+    <script src="aws-view_example.js" defer></script>
   </body>
 </html>
